--- a/package.json
+++ b/package.json
@@ -6,7 +6,17 @@
     "theme.min.js"
   ],
   "scripts": {
-    "prepublish": "gulp"
+    "prepublish": "gulp",
+    "standard": "standard --format"
+  },
+  "pre-commit": [
+    "standard"
+  ],
+  "standard": {
+    "ignore": [
+      "theme.js",
+      "theme.min.js"
+    ]
   },
   "devDependencies": {
     "bespoke-classes": "^1.0.0",
@@ -23,7 +33,9 @@
     "gulp-uglify": "^0.3.0",
     "insert-css": "^0.2.0",
     "lodash": "^2.4.1",
-    "normalizecss": "^3.0.0"
+    "normalizecss": "^3.0.0",
+    "pre-commit": "1.1.1",
+    "standard": "5.3.1"
   },
   "author": "David Mark Clements"
 }
