just run standard on pre-commit without --format

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   ],
   "scripts": {
     "prepublish": "gulp",
-    "format": "standard --format"
+    "format": "standard"
   },
   "pre-commit": [
     "format"
