--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   ],
   "scripts": {
     "prepublish": "gulp",
-    "lint": "standard"
+    "lint": "standard",
+    "format": "standard --lint"
   },
   "pre-commit": [
     "lint"
